# app

./: .gitignore  .prettierignore  AGENTS.md  README.md  eslint.config.js  implementation_plan.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.clinerules/memory-bank/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
.clinerules/workflows/: work
.github/workflows/: ci.yml
memory-bank/: activeContext.md  designPhilosophy.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: ci.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260304162200_initial_schema.sql  20260306173500_tool_result_role.sql
src-tauri/src/: lib.rs  main.rs  observability.rs
src-tauri/src/agent/: chat.rs  history.rs  mod.rs  persistence.rs  providers.rs  streaming.rs  system_prompt.rs  tools.rs
src-tauri/src/ai_instances/: keychain.rs  langfuse.rs  manager.rs  mod.rs  models.rs
src-tauri/src/canvas/: bridge.rs  mod.rs  protocol.rs  storage.rs  tools.rs
src-tauri/src/commands/: canvas.rs  chat.rs  instances.rs  langfuse.rs  memory.rs  mod.rs  scheduler.rs  tools.rs  workspace.rs
src-tauri/src/database/: mod.rs  schema.rs
src-tauri/src/memory/: chunking.rs  collections.rs  context_builder.rs  document_parser.rs  fact_extraction.rs  ingest.rs  long_term.rs  mod.rs  summarization.rs  working_memory.rs
src-tauri/src/scheduler/: mod.rs  runner.rs  storage.rs  tools.rs
src-tauri/src/tools/: code_generation.rs  collection_tools.rs  filesystem.rs  memory_tools.rs  mod.rs  planning.rs  registry.rs  rhai_bridge_tool.rs  rhai_engine.rs  subagents.rs
src-tauri/src/utils/: paths.rs
src-tauri/tests/: memory_integration.rs
src/components/canvas/: CanvasPanel.tsx  ProgramList.tsx
src/components/chat/: Message.tsx  MessageContent.tsx  MessageInput.tsx  MessageList.tsx  TypingIndicator.tsx
src/components/instances/: AIInstanceSelector.tsx  CreateInstanceDialog.tsx
src/components/layout/: Container.tsx  Header.tsx
src/components/settings/: Settings.tsx
src/components/ui/: Button.tsx  IconButton.tsx  Input.tsx  MenuDropdown.tsx
src/i18n/: config.ts
src/locales/de/: translation.json
src/locales/en/: translation.json
src/stores/: canvasStore.ts  chatStore.ts  instanceStore.ts
src/styles/: app.css
src/types/: index.ts
src/utils/: cn.ts
