[package]
name = "ownai"
version = "0.1.0"
license = "MPL-2.0"
description = "A self-evolving AI companion with continuous memory and local-first privacy."
repository = "https://github.com/own-ai/app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ownai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
fastembed = "5.8.1"
rig-core = "0.29.0"
ort = { version = "2.0.0-rc.11", default-features = false, features = ["alternative-backend"] }
ort-tract = "0.2.0"

